--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,23 +1,27 @@
 apply plugin: "com.android.application"
+apply plugin: "org.jetbrains.kotlin.android"
 apply plugin: "com.facebook.react"
 
 android {
-    compileSdkVersion 33
+    namespace "com.example.flighttracker"
+    compileSdkVersion 34
+    
     defaultConfig {
         applicationId "com.example.flighttracker"
-        minSdkVersion 21
-        targetSdkVersion 33
+        minSdkVersion 23
+        targetSdkVersion 34
         versionCode 1
         versionName "1.0"
     }
+    
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_11
-        targetCompatibility JavaVersion.VERSION_11
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
     }
-}
-
-repositories {
-    mavenCentral()
+    
+    kotlinOptions {
+        jvmTarget = '17'
+    }
 }
 
 dependencies {
@@ -25,6 +29,4 @@ dependencies {
     implementation("com.facebook.react:hermes-android")
 }
 
-react {
-   autolinkLibrariesWithApp()
-}
+apply from: file("../../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesAppBuildGradle(project)
