--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -11,7 +11,9 @@
        android:theme="@style/Theme.AppCompat.Light.NoActionBar">
      </activity>
 
-     <activity android:name=".MainActivity" android:exported="true">
+     <activity android:name=".MainActivity" 
+               android:exported="true"
+               android:theme="@style/Theme.AppCompat.Light.NoActionBar">
        <intent-filter>
          <action android:name="android.intent.action.MAIN" />
          <category android:name="android.intent.category.LAUNCHER" />
