--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,3 +1,11 @@
 reactNativeArchitectures=armeabi-v7a,arm64-v8a,x86,x86_64
-newArchEnabled=true
+newArchEnabled=false
 hermesEnabled=true
+
+# Project-wide Gradle settings
+org.gradle.jvmargs=-Xmx2048m -XX:MaxMetaspaceSize=512m
+android.useAndroidX=true
+android.enableJetifier=true
+
+# Java 17 configuration
+org.gradle.java.home=C:\\Program Files\\Eclipse Adoptium\\jdk-17.0.17.10-hotspot
