--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,10 +1,5 @@
-// Configures the React Native Gradle Settings plugin used for autolinking
-pluginManagement { includeBuild("../node_modules/@react-native/gradle-plugin") }
-plugins { id("com.facebook.react.settings") }
-extensions.configure(com.facebook.react.ReactSettingsExtension){ ex -> ex.autolinkLibrariesFromCommand() }
-// If using .gradle.kts files:
-// extensions.configure<com.facebook.react.ReactSettingsExtension> { autolinkLibrariesFromCommand() }
-includeBuild("../node_modules/@react-native/gradle-plugin")
+rootProject.name = 'FlightTracker'
+apply from: file("../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesSettingsGradle(settings)
+include ':app'
+includeBuild('../node_modules/@react-native/gradle-plugin')
 
-// Include your existing Gradle modules here.
-include(":app")
