--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -6,6 +6,7 @@ hermesEnabled=true
 org.gradle.jvmargs=-Xmx2048m -XX:MaxMetaspaceSize=512m
 android.useAndroidX=true
 android.enableJetifier=true
+android.suppressUnsupportedCompileSdk=35
 
 # Java 17 configuration
 org.gradle.java.home=C:\\Program Files\\Eclipse Adoptium\\jdk-17.0.17.10-hotspot
