--- a/.gitignore
+++ b/.gitignore
@@ -44,6 +44,7 @@ android/build/
 android/gradle/
 android/.idea/
 android/local.properties
+android/app/src/main/AndroidManifest.xml
 local.properties
 *.apk
 *.aab
